# ocaml-with-gtk4

./: LICENSE  Makefile  README.md
config/: discover_gtk.ml  discover_libintl.ml  dune
gettext/: dune  gettext.c  gettext.ml
gtk/: callback_exn.c  callback_exn.h  dune  gtk.ml  mainloop.c  mainloop.ml  mainwindow.c  mainwindow.h  mainwindow.ml  object.c  object.ml  prog_defs.h  scrolled_text.c  scrolled_text.h  scrolled_text.ml  start_gtk.c
locale/en_GB/LC_MESSAGES/: example-prog.mo
po/: en_GB.po  example-prog.pot  make_translations
src/: dispatcher.ml  dispatcher.mli  dune  main.ml
