(library
 (name gtk)
 (modes best)
 (modules gtk mainloop mainwindow object scrolled_text)
 (foreign_stubs
  (language c)
  (names start_gtk mainloop object mainwindow scrolled_text)
  (include_dirs ../config) ;; for config.h
  (flags :standard -std=c99 -O2 -I. (:include config.cflags)))
 (c_library_flags (:include config.libs)))

(rule
 (targets config.cflags config.libs)
 (action (run ../config/discover_gtk.exe)))
