(library
 (name gtk)
 (modes best)
 (modules gtk mainloop mainwindow object scrolled_text)
 (foreign_stubs
  (language c)
  (names start_gtk mainloop object mainwindow scrolled_text)
  (include_dirs ../config) ;; for config.h
  (flags :standard -std=c99 -O2 -I. (:include ../config/config_gtk.cflags)))
 (c_library_flags
  (:include ../config/config_gtk.libs)
  (:include ../config/config_intl.libs)))
